<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/top_bar"
        layout="@layout/top_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/uang_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/uang_text"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navbar"
        app:layout_constraintTop_toBottomOf="@id/uang_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalGuideline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_end="185dp" />
            <LinearLayout
                android:id="@+id/pay"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:background="#7569DE"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/verticalGuideline"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/judul_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/judul_pay"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/isi_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isi_pay"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/request"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:background="#B1DE52"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="@id/verticalGuideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/judul_req"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/judul_req"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/isi_req"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isi_req"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/paybill"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:background="#D9EADA"
                android:orientation="vertical"
                android:layout_marginVertical="10dp"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/verticalGuideline"
                app:layout_constraintTop_toBottomOf="@id/pay">
                <TextView
                    android:id="@+id/judul_paybill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/judul_paybill"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/isi_paybill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isi_paybill"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/buy"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:background="#F3C41F"
                android:orientation="vertical"
                android:layout_marginVertical="10dp"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="@id/verticalGuideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/request">
                <TextView
                    android:id="@+id/judul_buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/judul_buy"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/isi_buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isi_buy"
                    android:textColor="@color/black"/>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <include
        android:id="@+id/bottom_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/bottom_navbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>